--- a/src/style.css
+++ b/src/style.css
@@ -1,20 +1,28 @@
 .body {
 	border-radius: 15px;
-	padding: 50px 50px;
+	padding: 60px 60px;
 	margin: 100px auto 50px auto;
-	width: 80%;
+	width: 40%;
 	background: url("../images/background.jpg");
 	/* .../ css folder s garaad zurag oruulhiin tuld ../ ashiglna*/
 }
+
+@media screen and (max-width: 1000px) {
+	.body {
+		margin: 30px auto 50px auto;
+		width: 90%;
+	}
+}
+
 h1 {
 	text-align: center;
-	color: rgb(191, 55, 215);
+	color: rgb(44, 47, 132);
 	font-family: "Roboto", sans-serif;
 	font-size: 50px;
 }
 h1:hover {
 	cursor: pointer;
-	color: rgb(21, 21, 238);
+	color: rgb(94, 94, 238);
 }
 button {
 	background: rgb(62, 62, 235);
